--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <div class="icons">
             <i class="fas fa-map-marker-alt"></i>
             <h3>My Address</h3>
-            <p>NSIC, Ekkatuthangal, Chennai, India - 600032</p>
+            <p>Sengottai Nagar, Sathyamangalam(TK), Erode(DT), Tamil Nadu, India - 638401</p>
         </div>
 
     </div>
@@ -259,7 +259,7 @@
 
         </form>
 
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.2771019076067!2d80.2080985575047!3d13.0180178019653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52673ce67dc02f%3A0xdde24b47d130691a!2sNational%20Small%20Industries%20Corporation%20Technical%20Services%20Centre!5e0!3m2!1sen!2sin!4v1634439843036!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d908.4658600100553!2d77.28603992476904!3d11.501235259495447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba920d7acaa3fc1%3A0x280672077bfe9e9b!2sSathyamangalam%2C%20Tamil%20Nadu%20638402!5e0!3m2!1sen!2sin!4v1635063085908!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
 
     </div>
 
