--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="bar"> <span></span> </div>
         </div>
         <div class="progress">
-            <h3> React JS <span> 50% </span> </h3>
+            <h3> Core Python <span> 80% </span> </h3>
             <div class="bar"> <span></span> </div>
         </div>
         <!--
