--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p> <span> Country : </span> India </p>
             </div>
         </div>
-        <a href="cv/Lingaraj.pdf" class="btn" target="_blank" download>Download CV</a>
+        <a href="cv/Lingaraj Resume.pdf" class="btn" target="_blank" download>Download CV</a>
     </div>
 
 </div>
